--- a/index3.html
+++ b/index3.html
@@ -7,22 +7,29 @@
 
 <body>
 
-<header>Jennifer Ponder</header>
+<header>
+
+<h1>Jennifer Ponder</h1>
+<nav>
+     <ul>
+		<li><a href="#">About</a></li>
+		<li><a href="#">Portfolio</a></li>
+		<li><a href="#">Contact</a></li>
+	</ul>
+</nav>
+</header>
+
+
 
 <div id="container">
 <div id="header">
 <div id="menu">
 <div id="maincontent">
 	
-	<ul>
-		<li><a href="#">About</a><li>
-		<li><a href="#">Portfolio</a></li>
-		<li><a href="#">Contact</a></li>
-	</ul>
-
+	
 	
 
-<h1>About Me</h1>
+<h1 class="AboutMe">About Me</h1>
 
 <div id="image">
 
