--- a/index3.html
+++ b/index3.html
@@ -1,51 +1,60 @@
 <!DOCTYPE>
 <html>
 <head>
+	<meta charset="UTF-8">
 	<title>Basic-Portfolio</title>
 	<link rel="stylesheet" type="text/css" href="assets/css/style3.css">
 </head>
-
+     
 <body>
 
 <header>
 
 <h1>Jennifer Ponder</h1>
-<nav>
-     <ul>
-		<li><a href="#">About</a></li>
-		<li><a href="#">Portfolio</a></li>
-		<li><a href="#">Contact</a></li>
-	</ul>
-</nav>
+
+<ul class="nav">
+	
+	<li><a class="active"></li>
+	<li><a href="#about">About</a></li>
+	<li><a href="#portfolio">Portfolio</a></li>
+	<li><a href="#contact">Contact</a></li>
+
+</ul>
+
 </header>
 
 
-
-<div id="container">
-<div id="header">
+<div class="outercontainer">
+<div class="header">
 <div id="menu">
-<div id="maincontent">
-	
+<div class="innercontainer1">
+<div class="innercontainer2">
+
 	
 	
 
-<h1 class="AboutMe">About Me</h1>
+<h1 id="AboutMe">About Me</h1>
 
 <div id="image">
 
 <img id="image" src="assets/images/jennifer 2.jpg">
 
-<div id="sidebar">
+</div>
+
+
+<div class="sidebar">
 
 <h2>Connect With Me</h2>
 
-<img src="assets/images/if_github401441.png">
+<img src="assets/images/if_github_401441.png">
 <img src="assets/images/if_linkedin_1175606.png">
-<img src="assets/images/if_overflow_3346 95 (1).png">
+<img src="assets/images/if_overflow_334695 (1).png">
+
+</div>
+
 
 
 <p> Jennifer Ponder is a solutions focused media and client relations professional with experience in technical communications informative platforms and customer service based roles, creating content for brand strategy with product support and development. 
-Exceptional track record with maintaining client satisfaction and building relationships across several business platforms. 
 My academic background includes Bachelor of Arts in Mass Communication received from Dillard University and Associate of Science in Health Information Management received from Herzing University
 A creator at heart, who wants to share my passion with the world for tech space inclusion of women in Blockchain and Cryptocurrecncy innovative investment lines of business. As well as creating avenues for women to follow with their own platform to get involved into technology
 Traveling is my first love, from eating great food and enjoying great wineries in Napa Valley and New Mexico, to speed boating off Biscayne Bay in Miami and Playa del Carmen, Mexico. I also love to catch festivals in Montego Bay, Jamaica and scuba diving in St. Thomas and St. John U.S.V.I.
@@ -56,7 +65,9 @@ Traveling is my first love, from eating great food and enjoying great wineries i
 
 <div id="footer">
 
+   <p>Copyright 2018 Jennifer Ponder</p>
 
+</div>
 
 
 </body>
