--- a/index3.html
+++ b/index3.html
@@ -48,7 +48,8 @@ Traveling is my first love, from eating great food and enjoying great wineries i
 
 <hr>
 
-<img src="assets/images/if_github_401441.png">
+<img id=icons>
+<img src="assets/images/if_github_401441.png"> 
 <img src="assets/images/if_linkedin_1175606.png">
 <img src="assets/images/if_overflow_334695 (1).png">
 
@@ -57,7 +58,7 @@ Traveling is my first love, from eating great food and enjoying great wineries i
 
 <div id="footer">
 
-   <p>Copyright 2018 Jennifer Ponder</p>
+   <p> &copy; Copyright 2018 Jennifer Ponder</p>
 
 </div> 
 
