wip updated html contactpg

--- a/index3.html
+++ b/index3.html
@@ -16,7 +16,9 @@
 	
 	<!-- <li><a class="active"></li> -->
 	<li><a href="#about">About</a></li>
+	<li>|</li>
 	<li><a href="#portfolio">Portfolio</a></li>
+	<li>|</li>
 	<li><a href="#contact">Contact</a></li>
 
 </ul>
@@ -34,8 +36,8 @@
 <img id="image" src="assets/images/jennifer 2.jpg">
 
 <p> Jennifer Ponder is a solutions focused media and client relations professional with experience in technical communications informative platforms and customer service based roles, creating content for brand strategy with product support and development. 
-My academic background includes Bachelor of Arts in Mass Communication received from Dillard University and Associate of Science in Health Information Management received from Herzing University
-A creator at heart, who wants to share my passion with the world for tech space inclusion of women in Blockchain and Cryptocurrecncy innovative investment lines of business. As well as creating avenues for women to follow with their own platform to get involved into technology
+My academic background includes Bachelor of Arts in Mass Communication received from Dillard University and Associate of Science in Health Information Management received from Herzing University.
+A creator at heart, who wants to share my passion with the world for tech space inclusion of women in Blockchain and Cryptocurrecncy innovative investment lines of business. As well as creating avenues for women to follow with their own platform to get involved into technology. 
 Traveling is my first love, from eating great food and enjoying great wineries in Napa Valley and New Mexico, to speed boating off Biscayne Bay in Miami and Playa del Carmen, Mexico. I also love to catch festivals in Montego Bay, Jamaica and scuba diving in St. Thomas and St. John U.S.V.I.
 </p>
 
